Added legacy block for backwards compatibility

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "autoload": {
     "files": [ "registration.php" ],
     "psr-4": {
-      "MageSuite\\ContentConstructorFrontend\\": ""
+      "MageSuite\\ContentConstructorFrontend\\": "",
+      "Creativestyle\\ContentConstructorFrontendExtension\\": "Legacy"
     }
   }
 }
