--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
   "homepage": "https://creativestyle.de",
   "license": "OSL-3.0",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
-    "magento/framework": "^101.0.0",
-    "magento/module-cms": "^102.0.0"
+    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0"
   },
   "autoload": {
     "files": [ "registration.php" ],
